# nba_data_lake

./: README.md  TODO  nba_data_lake.code-workspace  pyproject.toml  regex.py
.devcontainer/: devcontainer.json
airflow/: airflow.cfg  standalone_admin_password.txt
airflow/dags/: nba_commonallplayers_load.py
airflow/logs/scheduler/: latest
backup/: bakp.py  commonallplayers.py  convert_seasons.py  injury copy.py  injury_players.py  lake.commonallplayers.py  lakeplayerindex.py  p2_extract_transactions_from_lake.py  player_nba.py  prosports.data.transactions.sql
backup/_backup/: nba_get_leaguegamelogs copy.py  nba_sqlite.py  player.py  player_profiles.py  segment_type.py  sqlite.py
backup/_backup/scripts/sqlite/: SAVE PAD.SQL  leaguegamelog_player.sql  nba_playergamelogs.sql  nba_players_days_rest_upd.sql  player_id_injury.sql  player_id_injury_@.sql  playergamelogs_select_calc_games_in_x.sql  scratch.sql  (+4 more)
backup/etl_bkp/: xx_p1_load_commonallplayers_into_lake.py  xx_p1_load_playerindex_into_lake.py  xxp2_load_commonallplayers_from_lake.py
etl/: p1_load_playergamelogs_into_lake.py  p1_load_transactions_into_lake.py  p2_load_playergamelogs_from_lake.py  p3_load_player_gamelogs_players.py  p3_load_playergamelogs_extended.py  p4_load_injury_transactions_injury_extended.py
etl/new_db/: p0_load_seasons.py  p0_load_transaction_injury_keyword_exclusions.py
src/nba_data_lake/apis/: nba_stats.py  pro_sports_transactions.py
src/osiics/: body.py  illness.py  ioc.py  organ.py  osics_v14_ioc.sql  osics_v14_ioc_categories.sql  tissue.py  tracking work.sql
(+14 files in other folders)
